--- a/Scanning/Scanning/Scanning.vbproj
+++ b/Scanning/Scanning/Scanning.vbproj
@@ -114,6 +114,12 @@
       <DependentUpon>MainForm.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="MainTaskBar.Designer.vb">
+      <DependentUpon>MainTaskBar.vb</DependentUpon>
+    </Compile>
+    <Compile Include="MainTaskBar.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -167,6 +173,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainTaskBar.resx">
+      <DependentUpon>MainTaskBar.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
@@ -264,6 +273,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="My Project\house.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="My Project\backbutton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="My Project\navigation.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="My Project\back_button.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="My Project\communication.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
