--- a/Scanning/Scanning/Scanning.vbproj
+++ b/Scanning/Scanning/Scanning.vbproj
@@ -361,6 +361,18 @@
   <ItemGroup>
     <None Include="My Project\assisstant.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="My Project\nurseWalk.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="My Project\return.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="My Project\buildingButton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="My Project\hallwayButton.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
