--- a/Scanning/Scanning/Scanning.vbproj
+++ b/Scanning/Scanning/Scanning.vbproj
@@ -577,6 +577,9 @@
   <ItemGroup>
     <None Include="My Project\openWindowSideways.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="My Project\windowPic.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
