lights and fans fully implemented with settings

--- a/Scanning/Scanning/Scanning.vbproj
+++ b/Scanning/Scanning/Scanning.vbproj
@@ -598,6 +598,18 @@
   <ItemGroup>
     <None Include="My Project\blinds.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="My Project\fanHigh.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="My Project\fanMedium.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="My Project\fanLow.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="My Project\bulbDim.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
