access to vaccuum and schedule

--- a/Scanning/Scanning/Scanning.vbproj
+++ b/Scanning/Scanning/Scanning.vbproj
@@ -644,6 +644,15 @@
   <ItemGroup>
     <None Include="My Project\doorbellCancel.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="My Project\navigationWheelchair.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="My Project\schedule.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="My Project\roomba.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
