Adding functionality for more window states Now supports slightly open and half open states

--- a/Scanning/Scanning/Scanning.vbproj
+++ b/Scanning/Scanning/Scanning.vbproj
@@ -653,6 +653,18 @@
   <ItemGroup>
     <None Include="My Project\roomba.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BlindsHalfOpen.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BlindsSlightlyOpen.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\WindowHalfOpen.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\WindowSlightlyOpen.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
