--- a/Scanning/Scanning/Scanning.vbproj
+++ b/Scanning/Scanning/Scanning.vbproj
@@ -710,6 +710,12 @@
   <ItemGroup>
     <None Include="Resources\OpenDoor.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="My Project\elevator.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="My Project\BlindsClosedOpenSlats.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
